Route /predict sur FastAPI

--- a/ml/algo_pipeline_demo.ipynb
+++ b/ml/algo_pipeline_demo.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from model import DataManager\n",
-    "from utils.utils import ModelBuilder"
+    "from utils.utils import ModelBuilder\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +39,9 @@
       "- boolean : ['is_rebookable', 'is_new_listing', 'is_fully_refundable', 'is_host_highly_rated', 'is_business_travel_ready']\n",
       "- categorical : ['name', 'type', 'city', 'neighborhood']\n",
       "\n",
-      "• Useless dropped columns (2 column(s)) : ['Unnamed: 0', 'Unnamed: 0']\n",
+      "• Useless dropped columns (1 column(s)) : ['Unnamed: 0']\n",
       "\n",
-      "• Duplicated dropped columns (2 column(s)) : ['is_business_travel_ready', 'is_business_travel_ready']\n",
+      "• Duplicated dropped columns (1 column(s)) : ['is_business_travel_ready']\n",
       "\n",
       "• Nan dropped columns by thresold (0 column(s) for a thresold of 0.3) : []\n",
       "\n",
@@ -63,6 +64,51 @@
     "model_builder.print_accuracy(X_train, y_train)\n",
     "print(model_builder)\n",
     "model_builder.save_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "      latitude  longitude  beds  bedrooms  bathrooms  pricing_weekly_factor  \\\n",
+       "728  48.873734   2.303226     3         2        2.0                    1.0   \n",
+       "\n",
+       "     pricing_monthly_factor  \n",
+       "728                     1.0  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>latitude</th>\n      <th>longitude</th>\n      <th>beds</th>\n      <th>bedrooms</th>\n      <th>bathrooms</th>\n      <th>pricing_weekly_factor</th>\n      <th>pricing_monthly_factor</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>728</th>\n      <td>48.873734</td>\n      <td>2.303226</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "X_train[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([352.27113162])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "joblib.load('./model.joblib').predict(X_train[:1])"
    ]
   },
   {
